Pandas/.nbgrader.log
[NotebookApp | ERROR] Exception while loading config file /etc/jupyter/nbgrader_config.py
    Traceback (most recent call last):
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/application.py", line 562, in _load_config_files
        config = loader.load_config()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 457, in load_config
        self._read_file_as_dict()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 489, in _read_file_as_dict
        py3compat.execfile(conf_filename, namespace)
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/ipython_genutils/py3compat.py", line 198, in execfile
        exec(compiler(f.read(), fname, 'exec'), glob, loc)
      File "/etc/jupyter/nbgrader_config.py", line 29
        "C++14": "// your code here\nthrow new Error();"
               ^
    SyntaxError: invalid syntax
[NotebookApp | INFO] Loading the validate_assignment nbgrader serverextension
[NotebookApp | INFO] nteract extension loaded from /home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/nteract_on_jupyter
[NotebookApp | INFO] Serving notebooks from local directory: /home/hp/workfolder/simplilearn/simplilearn-AI-masters/Pandas
[NotebookApp | INFO] The Jupyter Notebook is running at:
[NotebookApp | INFO] http://localhost:8888/?token=4c5a9ca8d3cc96fcbc455ac8d3d7e766919eda56d2c039c3
[NotebookApp | INFO] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).
[NotebookApp | CRITICAL] 
    
    Copy/paste this URL into your browser when you connect for the first time,
    to login with a token:
        http://localhost:8888/?token=4c5a9ca8d3cc96fcbc455ac8d3d7e766919eda56d2c039c3
[NotebookApp | INFO] Accepting one-time-token-authenticated connection from 127.0.0.1
[NotebookApp | WARNING] Notebook Assignment1/Pandas - Assignment 01.ipynb is not trusted
[NotebookApp | INFO] Kernel started: 7eebff7c-f6fd-4d4a-8180-0b93d82d1969
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel 7eebff7c-f6fd-4d4a-8180-0b93d82d1969
[NotebookApp | INFO] Saving file at /Assignment1/Pandas - Assignment 01.ipynb
[NotebookApp | INFO] Saving file at /Assignment1/Pandas - Assignment 01.ipynb
[NotebookApp | INFO] Saving file at /Assignment1/Pandas - Assignment 01.ipynb
[NotebookApp | INFO] Saving file at /Assignment1/Pandas - Assignment 01.ipynb
[NotebookApp | INFO] Saving file at /Assignment1/Pandas - Assignment 01.ipynb
[NotebookApp | INFO] Saving file at /Assignment1/Pandas - Assignment 01.ipynb
[NotebookApp | INFO] Saving file at /Assignment1/Pandas - Assignment 01.ipynb
[NotebookApp | INFO] Starting buffering for 7eebff7c-f6fd-4d4a-8180-0b93d82d1969:8ce3afdb74c449e48493420dc5c00c30
[NotebookApp | INFO] interrupted
[NotebookApp | CRITICAL] Shutdown confirmed
[NotebookApp | INFO] Shutting down 1 kernel
[NotebookApp | INFO] Kernel shutdown: 7eebff7c-f6fd-4d4a-8180-0b93d82d1969
[NotebookApp | ERROR] Exception while loading config file /etc/jupyter/nbgrader_config.py
    Traceback (most recent call last):
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/application.py", line 562, in _load_config_files
        config = loader.load_config()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 457, in load_config
        self._read_file_as_dict()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 489, in _read_file_as_dict
        py3compat.execfile(conf_filename, namespace)
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/ipython_genutils/py3compat.py", line 198, in execfile
        exec(compiler(f.read(), fname, 'exec'), glob, loc)
      File "/etc/jupyter/nbgrader_config.py", line 29
        "C++14": "// your code here\nthrow new Error();"
               ^
    SyntaxError: invalid syntax
[NotebookApp | INFO] Loading the validate_assignment nbgrader serverextension
[NotebookApp | INFO] nteract extension loaded from /home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/nteract_on_jupyter
[NotebookApp | INFO] Serving notebooks from local directory: /home/hp/workfolder/simplilearn/simplilearn-AI-masters/Pandas
[NotebookApp | INFO] The Jupyter Notebook is running at:
[NotebookApp | INFO] http://localhost:8888/?token=a7ad6ab183c8d94a8b05141e8134f360e4a5431ffdb0fe3a
[NotebookApp | INFO] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).
[NotebookApp | CRITICAL] 
    
    Copy/paste this URL into your browser when you connect for the first time,
    to login with a token:
        http://localhost:8888/?token=a7ad6ab183c8d94a8b05141e8134f360e4a5431ffdb0fe3a
[NotebookApp | INFO] Accepting one-time-token-authenticated connection from 127.0.0.1
[NotebookApp | WARNING] Notebook Assignment_02/Pandas - Assignment 02.ipynb is not trusted
[NotebookApp | INFO] Kernel started: 4a95ca2a-95ab-448e-a357-28b821b71049
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel 4a95ca2a-95ab-448e-a357-28b821b71049
[NotebookApp | INFO] Saving file at /Assignment_02/Pandas - Assignment 02.ipynb
[NotebookApp | INFO] Saving file at /Assignment_02/Pandas - Assignment 02.ipynb
[NotebookApp | INFO] Saving file at /Assignment_02/Pandas - Assignment 02.ipynb
[NotebookApp | INFO] Saving file at /Assignment_02/Pandas - Assignment 02.ipynb
[NotebookApp | INFO] Saving file at /Assignment_02/Pandas - Assignment 02.ipynb
[NotebookApp | INFO] Saving file at /Assignment_02/Pandas - Assignment 02.ipynb
[NotebookApp | INFO] Starting buffering for 4a95ca2a-95ab-448e-a357-28b821b71049:2ed22f0c43b743cbaa1ff3cae60e903c
[NotebookApp | INFO] interrupted
[NotebookApp | CRITICAL] Shutdown confirmed
[NotebookApp | INFO] Shutting down 1 kernel
[NotebookApp | INFO] Kernel shutdown: 4a95ca2a-95ab-448e-a357-28b821b71049
